--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,4 @@ spring:
       ddl-auto: update
       use-new-id-generator-mappings: false
     properties:
-      hibernate:
-        format_sql: true 
+      hibernate.format_sql: true 
